# DiagnosticIndexCLI

./: CMakeLists.txt  README.md
computeMean/: CMakeLists.txt  computeMean.cxx  computeMean.xml
computeShapeOALoads/: CMakeLists.txt  computeShapeOALoads.cxx  computeShapeOALoads.xml
saveModel/: CMakeLists.txt  saveModel.cxx  saveModel.xml
