CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(computeShapeOALoads)

FIND_PACKAGE(statismo REQUIRED)

# Slicer Execution Model
find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})
include(${GenerateCLP_USE_FILE})

# VTK
FIND_PACKAGE(VTK REQUIRED)
include (${VTK_USE_FILE})

# Statismo
include_directories(${statismo_INCLUDE_DIRS})
link_directories(${VTK_LIBRARY_DIRS} ${statismo_LIBRARY_DIRS})

generateCLP(computeShapeOALoads.cxx computeShapeOALoads.xml)

if(UNIX)
    set( INSTALL_RUNTIME_DESTINATION bin)
    set( INSTALL_LIBRARY_DESTINATION lib)
    set( INSTALL_ARCHIVE_DESTINATION lib)
endif()

SEMMacroBuildCLI(
    NAME computeShapeOALoads
    EXECUTABLE_ONLY
    TARGET_LIBRARIES ${VTK_LIBRARIES} ${statismo_LIBRARIES}
    INCLUDE_DIRECTORIES  ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)

install(TARGETS computeShapeOALoads RUNTIME DESTINATION ${INSTALL_RUNTIME_DESTINATION})
